src/objects/Book_Detail__c.object
<CustomObject>
    <description>Returns Book to be returned details</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Days_Left__c</fullName>
        <formula>Return_Date__c - Issue_Date__c</formula>
        <label>No of Days Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_By__c</fullName>
        <formula>Issue_Date__c   + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <defaultValue>TODAY() + 4</defaultValue>
        <label>Return Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Book_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date_formula_field__c</fullName>
        <formula>NOW()  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>date formula field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>readonly__c</fullName>
        <label>readonly</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Book Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book  Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book  Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>